--- a/app/views/admin/text_blocks/_edit_card.html.erb
+++ b/app/views/admin/text_blocks/_edit_card.html.erb
@@ -39,8 +39,8 @@
               <button type="button"
                       id="delete-button-<%= block&.id || new_id %>"
                       data-delete-record-id="<%= block&.id || new_id %>"
-                      data-controller="delete-record tooltip"
-                      data-action="click->delete-record#submit"
+                      data-controller="delete-text-block tooltip"
+                      data-action="click->delete-text-block#submit"
                       data-tooltip-target="cell"
                       data-tooltip-placement-value="top"
                       class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
