--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="sticky top-0 z-20 bg-white">
   <div class="mx-8">
-    <div class="max-w-screen-xl sm:px-6 lg:px-0">
+    <div class="sm:px-6 lg:px-0">
       <div class="flex h-24 grid grid-flow-col items-center justify-between">
         <div class="flex">
           <div class="grid grid-flow-col grid-cols-4">
