--- a/app/views/admin/text_blocks/_edit_card.html.erb
+++ b/app/views/admin/text_blocks/_edit_card.html.erb
@@ -8,7 +8,7 @@
           <div class="flex items-center">
             <div class="grid justify-items-start">
               <div class="inline-flex" id="<%= "#{language.upcase}-#{order_number}" %>">
-                <%= "#{language.upcase}-#{order_number}" %>
+                <%= "#{language.upcase}-#{order_number.to_i + 1}" %>
               </div>
             </div>
           </div>
