--- a/app/views/text_blocks/advanced_search.html.erb
+++ b/app/views/text_blocks/advanced_search.html.erb
@@ -298,6 +298,27 @@
     <div id="search-result-div" class="flex" style="grid-column-start: 2; grid-column-end: 3; grid-row: 2;">
 
       <div class="flex grid grid-flow-row">
+        <div class="flex items-center justify-between py-3">
+          <%= render 'shared/paging', records: @text_block_pairs,
+                     url_method: -> (**params) { advanced_search_text_blocks_path(**params) },
+                     paging_params: params.permit(:query,
+                                                  # :termin,
+                                                  :exact_match,
+                                                  :original_language,
+                                                  :year_start,
+                                                  :year_end,
+                                                  :translation_year_start,
+                                                  :translation_year_end,
+                                                  search_text_block_pair: { supergroup_ids: [],
+                                                                            group_ids: [],
+                                                                            collection_ids: [],
+                                                                            type_ids: [],
+                                                                            genre_ids: [],
+                                                                            field_ids: [],
+                                                                            author_ids: [],
+                                                                            translator_ids: [],
+                                                                            publishing_ids: [] }) %>
+        </div>
 
         <div data-search-highlight-target="body" class="flex grid grid-flow-row space-y-3">
           <%= render 'shared/search_results', text_block_pairs: @text_block_pairs %>
