--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-.mt-30 {
-  margin-top: 8rem;
+div.field_with_errors > label {
+  @apply text-red-900 w-full;
 }
 
+div.field_with_errors > :is(input, textarea, select) {
+  @apply border-red-300 text-red-900 placeholder-red-300 w-full;
+}
 /*
 
 @layer components {
