--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,12 @@
 
   <body class="h-full bg-stone-100">
     <!-- <main class="container mx-auto px-5"> -->
-      <div class="min-h-full">
+      <div class="min-h-full flex flex-col">
         <%= render "shared/header" %>
-        <div>
+        <div class="flex-1">
           <%= yield %>
         </div>
+        <%= render "shared/footer" %>
       </div>
     <!-- </main> -->
   </body>
