--- a/app/views/text_blocks/advanced_search.html.erb
+++ b/app/views/text_blocks/advanced_search.html.erb
@@ -1,6 +1,6 @@
 <div data-controller="search-highlight" data-search-highlight-full-word-match-value="true">
 
-  <div class="max-w-screen-2xl mx-auto justify-items-stretch" style="display: grid; gap: 2rem; grid-auto-columns: 350px auto; grid-auto-rows: auto auto">
+  <div class="max-w-screen-2xl mx-auto justify-items-stretch relative" style="display: grid; gap: 2rem; grid-auto-columns: 350px auto; grid-auto-rows: auto auto">
     <div id="search-form-div" class="mt-4 flex" style="grid-row-start: 1; grid-row-end: 3; position: relative">
       <%= form_for @search, url: advanced_search_text_blocks_path(locale: I18n.locale), method: :get do |form| %>
         <div style="position: sticky; top: 16%; left: 3%">
@@ -11,17 +11,17 @@
             <div data-search-highlight-target="searchbar" class="border-b-2 border-solid border-advanced-gray">
               <%= form.text_field :query, name: :query, class: "w-full mt-6 mb-6 border-stone-400 focus:ring-oceanside-500 focus:border-oceanside-500" %>
             </div>
-<!--            terms-->
-<!--            <div class="inline-flex mt-6 mb-4">-->
-<!--              <div class="flex grid grid-flow-col space-x-2 items-center">-->
-<!--                <div class="inline-flex">-->
-                  <%#= form.check_box :termin, name: :termin %>
-<!--                </div>-->
-<!--                <div class="inline-flex">-->
-                  <%#= t('advanced_search.only_terminology') %>
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
+            <!--            terms-->
+            <!--            <div class="inline-flex mt-6 mb-4">-->
+            <!--              <div class="flex grid grid-flow-col space-x-2 items-center">-->
+            <!--                <div class="inline-flex">-->
+            <%#= form.check_box :termin, name: :termin %>
+            <!--                </div>-->
+            <!--                <div class="inline-flex">-->
+            <%#= t('advanced_search.only_terminology') %>
+            <!--                </div>-->
+            <!--              </div>-->
+            <!--            </div>-->
             <div class="border-b-2 border-solid border-advanced-gray">
               <div class="inline-flex mt-6 mb-6">
                 <div class="flex grid grid-flow-col space-x-2 items-center">
@@ -292,59 +292,60 @@
         </div>
       <% end %>
     </div>
-    <div id="total-count-div" class="top-40 py-4 inline-flex text-gray-400 text-sm items-center bg-gray-100" style="grid-column: 2;">
-      <%= @text_block_pairs.total_count %> <%= t('advanced_search.results') %>
-    </div>
-    <div id="search-result-div" class="flex" style="grid-column-start: 2; grid-column-end: 3; grid-row: 2;">
-
+    <div id="search-result-div" class="flex" style="grid-area: 2 / 2 / auto / 3">
+      <%= content_tag :div, t('advanced_search.no_results'), class: 'absolute top-6 right-16' if @text_block_pairs.blank? %>
       <div class="flex grid grid-flow-row">
         <div class="flex items-center justify-between py-3">
-          <%= render 'shared/paging', records: @text_block_pairs,
-                     url_method: -> (**params) { advanced_search_text_blocks_path(**params) },
-                     paging_params: params.permit(:query,
-                                                  # :termin,
-                                                  :exact_match,
-                                                  :original_language,
-                                                  :year_start,
-                                                  :year_end,
-                                                  :translation_year_start,
-                                                  :translation_year_end,
-                                                  collocations: %i[first second],
-                                                  search_text_block_pair: { supergroup_ids: [],
-                                                                            group_ids: [],
-                                                                            collection_ids: [],
-                                                                            type_ids: [],
-                                                                            genre_ids: [],
-                                                                            field_ids: [],
-                                                                            author_ids: [],
-                                                                            translator_ids: [],
-                                                                            publishing_ids: [] }) %>
+          <% if @text_block_pairs.total_pages > 0 %>
+            <%= render 'shared/paging', records: @text_block_pairs,
+                       url_method: -> (**params) { advanced_search_text_blocks_path(**params) },
+                       paging_params: params.permit(:query,
+                                                    # :termin,
+                                                    :exact_match,
+                                                    :original_language,
+                                                    :year_start,
+                                                    :year_end,
+                                                    :translation_year_start,
+                                                    :translation_year_end,
+                                                    collocations: %i[first second],
+                                                    search_text_block_pair: { supergroup_ids: [],
+                                                                              group_ids: [],
+                                                                              collection_ids: [],
+                                                                              type_ids: [],
+                                                                              genre_ids: [],
+                                                                              field_ids: [],
+                                                                              author_ids: [],
+                                                                              translator_ids: [],
+                                                                              publishing_ids: [] }) %>
+          <% end %>
         </div>
 
         <div data-search-highlight-target="body" class="flex grid grid-flow-row space-y-3">
           <%= render 'shared/search_results', text_block_pairs: @text_block_pairs %>
         </div>
         <div class="flex items-center justify-between py-3">
-          <%= render 'shared/paging', records: @text_block_pairs,
-                     url_method: -> (**params) { advanced_search_text_blocks_path(**params) },
-                     paging_params: params.permit(:query,
-                                                  # :termin,
-                                                  :exact_match,
-                                                  :original_language,
-                                                  :year_start,
-                                                  :year_end,
-                                                  :translation_year_start,
-                                                  :translation_year_end,
-                                                  collocations: %i[first second],
-                                                  search_text_block_pair: { supergroup_ids: [],
-                                                                            group_ids: [],
-                                                                            collection_ids: [],
-                                                                            type_ids: [],
-                                                                            genre_ids: [],
-                                                                            field_ids: [],
-                                                                            author_ids: [],
-                                                                            translator_ids: [],
-                                                                            publishing_ids: [] }) %>
+          <% if @text_block_pairs.total_pages > 0 %>
+            <%= render 'shared/paging', records: @text_block_pairs,
+                       url_method: -> (**params) { advanced_search_text_blocks_path(**params) },
+                       paging_params: params.permit(:query,
+                                                    # :termin,
+                                                    :exact_match,
+                                                    :original_language,
+                                                    :year_start,
+                                                    :year_end,
+                                                    :translation_year_start,
+                                                    :translation_year_end,
+                                                    collocations: %i[first second],
+                                                    search_text_block_pair: { supergroup_ids: [],
+                                                                              group_ids: [],
+                                                                              collection_ids: [],
+                                                                              type_ids: [],
+                                                                              genre_ids: [],
+                                                                              field_ids: [],
+                                                                              author_ids: [],
+                                                                              translator_ids: [],
+                                                                              publishing_ids: [] }) %>
+          <% end %>
         </div>
       </div>
     </div>
