--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -13,7 +13,7 @@
       <%= link_to export_admin_text_blocks_path(locale: I18n.locale, collection_id: @collection.id, format: :xlsx), 'data-controller': "tooltip", 'data-tooltip-target': "cell", 'data-tooltip-placement-value': "top", class: "px-3 py-2 grid grid-flow-col space-x-1 inline-flex justify-center items-center text-sm bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
         <div class="inline-flex">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"/>
           </svg>
         </div>
         <div class="inline-flex">
@@ -42,7 +42,7 @@
               <%= link_to export_admin_text_blocks_path(locale: I18n.locale, collection_id: @collection.id, language: :ka, format: :docx), 'data-controller': "tooltip", 'data-tooltip-target': "cell", 'data-tooltip-placement-value': "top", class: "ml-2 px-3 py-2 grid grid-flow-col space-x-1 inline-flex justify-center items-center text-sm bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                 <div class="inline-flex">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"/>
                   </svg>
                 </div>
                 <div class="inline-flex">
@@ -70,10 +70,10 @@
           <div class="grid grid-flow-col space-x-2 justify-items-end">
             <div class="inline-flex items-center">
               <div class="grid grid-flow-col items-end">
-                <%= link_to export_admin_text_blocks_path(locale: I18n.locale, collection_id: @collection.id, language: :en, format: :docx), 'data-controller': "tooltip", 'data-tooltip-target': "cell", 'data-tooltip-placement-value': "top",  class: "ml-2 px-3 py-2 grid grid-flow-col space-x-1 inline-flex justify-center items-center text-sm bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= link_to export_admin_text_blocks_path(locale: I18n.locale, collection_id: @collection.id, language: :en, format: :docx), 'data-controller': "tooltip", 'data-tooltip-target': "cell", 'data-tooltip-placement-value': "top", class: "ml-2 px-3 py-2 grid grid-flow-col space-x-1 inline-flex justify-center items-center text-sm bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <div class="inline-flex">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"/>
                     </svg>
                   </div>
                   <div class="inline-flex">
@@ -131,20 +131,19 @@
         </div>
       </div>
     </div>
-    <% @text_blocks.group_by(&:order_number).each do |order_number, block_group| %>
+    <% @order_number = 0 %>
+    <% @text_blocks.group_by(&:order_number).each do |_order_number, block_group| %>
+      <% @order_number += 1 %>
       <div class="mt-3 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
         <% ka_block = block_group.detect(&:ka?) %>
-        <%= render partial: 'edit_card', locals: { block: ka_block, language: 'ka', new_id: 'dummy' + SecureRandom.uuid, selected_block_id: @anchored_block&.id, order_number:} %>
+        <%= render partial: 'edit_card', locals: { block: ka_block, language: 'ka', new_id: 'dummy' + SecureRandom.uuid, selected_block_id: @anchored_block&.id, order_number: @order_number } %>
 
         <% en_block = block_group.detect(&:en?) %>
-        <%= render partial: 'edit_card', locals: { block: en_block, language: 'en', new_id: 'dummy' + SecureRandom.uuid, selected_block_id: @anchored_block&.id, order_number: } %>
+        <%= render partial: 'edit_card', locals: { block: en_block, language: 'en', new_id: 'dummy' + SecureRandom.uuid, selected_block_id: @anchored_block&.id, order_number: @order_number } %>
       </div>
     <% end %>
-
-    </div>
-
-    <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_text_block_modal.title'),
-                                                    modal_text: t('delete_text_block_modal.text') %>
-
   </div>
+
+  <%= render 'admin/shared/confirm_delete_modal', modal_title: t('delete_text_block_modal.title'),
+             modal_text: t('delete_text_block_modal.text') %>
 </main>
