--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,4 +1,2 @@
-<% flash.each do |type, msg| %>
-  <span><%= type %></span>
-  <span><%= msg %></span>
-<% end %>
+<%= content_tag :p, notice, class: 'text-green-500 bg-green-200 py-2 px-4 text-center' if notice %>
+<%= content_tag :p, alert, class: 'text-red-500 bg-red-200 py-2 px-4 text-center' if alert %>
