--- a/app/views/admin/types/edit.html.erb
+++ b/app/views/admin/types/edit.html.erb
@@ -3,7 +3,7 @@
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_type_path(locale: I18n.locale),
+               url: admin_type_path(@type, locale: I18n.locale),
                method: :put,
                record: @type,
                back_url: admin_types_path(locale: I18n.locale),
