--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -3,7 +3,7 @@
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_genre_path(locale: I18n.locale),
+               url: admin_genre_path(@genre, locale: I18n.locale),
                method: :put,
                record: @genre,
                back_url: admin_genres_path(locale: I18n.locale),
