--- a/app/views/admin/translators/edit.html.erb
+++ b/app/views/admin/translators/edit.html.erb
@@ -3,7 +3,7 @@
 <main>
   <div class="mx-auto max-w-screen-2xl sm:px-6 lg:px-8">
     <%= render('admin/shared/form',
-               url: admin_translator_path(locale: I18n.locale),
+               url: admin_translator_path(@translator, locale: I18n.locale),
                method: :put,
                record: @translator,
                back_url: admin_translators_path(locale: I18n.locale),
