--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,17 +1,17 @@
 <%= turbo_frame_tag 'feedback', class: 'flex-1 my-2' do %>
-  <% if @feedback.errors.any? %>
+  <% if feedback.errors.any? %>
     <div class="text-red-500 px-4">
-      <h2><%= pluralize(@feedback.errors.count, t('contact.error')) %>:</h2>
+      <h2><%= pluralize(feedback.errors.count, t('contact.error')) %>:</h2>
       <ul>
-        <% @feedback.errors.full_messages.each do |message| %>
+        <% feedback.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
     </div>
-  <% elsif @feedback.persisted? %>
+  <% elsif feedback.persisted? %>
     <p class="px-4 pb-2 text-center text-green-600 font-bold"><%= t('contact.thanks') %></p>
   <% end %>
-  <%= form_with model: @feedback, url: contacts_path, method: :post, class: 'flex flex-col px-4' do |f| %>
+  <%= form_with model: feedback, url: contacts_path, method: :post, class: 'flex flex-col px-4' do |f| %>
     <%= f.label :first_name, class: 'mb-2' %>
     <%= f.text_field :first_name, required: true %>
     <%= f.label :last_name, class: 'my-2' %>
